--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <a href="#" class="forgot-pass">Forgot password</a>
             </div>
             <input type="submit" value="Login" class="btn solid" />
-            <p class="social-text">Or sign in with your social platforms</p>
+            <p class="social-text">Or sign in with your social platforms.</p>
             <div class="social-media">
               <a href="#" class="social-icon">
                 <i class="fab fa-facebook-f"></i>
